Updated userscontroller to interact with azure tables. Added get operation for solutions page

--- a/KarynPHD/ClientApp/src/custom.css
+++ b/KarynPHD/ClientApp/src/custom.css
@@ -41,3 +41,11 @@ code {
     font-size: 24px;
   }
 }
+
+.emojiButton:hover {
+  filter: brightness(45%);
+}
+
+.emojiButton:active {
+  filter: brightness(45%);
+}
